--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,22 @@
 {
-    "name": "sebastian/phpcpd",
-    "description": "Copy/Paste Detector (CPD) for PHP code.",
-    "homepage": "https://github.com/sebastianbergmann/phpcpd",
+    "name": "enriquesomolinos/phpweb-cpd",
+    "description": "Copy/Paste Detector for PHP web projects.",
+    "homepage": "https://github.com/enriquesomolinos/phpweb-cpd",
     "license": "BSD-3-Clause",
     "authors": [
         {
+            "name": "Enrique Somolinos",
+            "email": "enrique.somolinos@gmail.com",
+            "role": "lead"
+        },
+        {
             "name": "Sebastian Bergmann",
             "email": "sebastian@phpunit.de",
-            "role": "lead"
+            "role": "author of phpcpd project https://github.com/sebastianbergmann/phpcpd/"
         }
     ],
     "support": {
-        "issues": "https://github.com/sebastianbergmann/phpcpd/issues"
+        "issues": "https://https://github.com/enriquesomolinos/phpweb-cpd/issues"
     },
     "config": {
         "platform": {
@@ -28,7 +33,8 @@
         "sebastian/finder-facade": "^2.0",
         "sebastian/version": "^3.0",
         "symfony/console": "^4.0|^5.0",
-        "phpunit/php-timer": "^3.0"
+        "phpunit/php-timer": "^3.0",
+        "friendsoftwig/twigcs": "^3.2"
     },
     "autoload": {
         "classmap": [
@@ -36,7 +42,7 @@
         ]
     },
     "bin": [
-        "phpcpd"
+        "phpweb-cpd"
     ],
     "extra": {
         "branch-alias": {
