--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,9 @@
         "sebastian/version": "^3.0",
         "symfony/console": "^4.0|^5.0",
         "phpunit/php-timer": "^3.0",
-        "friendsoftwig/twigcs": "^3.2"
+        "friendsoftwig/twigcs": "^3.2",
+        "shopsys/jparser": "^0.1",
+        "yannickl88/css-tokenizer" : "^1.2"
     },
     "autoload": {
         "classmap": [
