--- a/composer.json
+++ b/composer.json
@@ -20,20 +20,19 @@
     },
     "config": {
         "platform": {
-            "php": "7.3.0"
+            "php": "7.2.0"
         },
         "optimize-autoloader": true,
         "sort-packages": true
     },
-    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.3",
+        "php": "^7.2",
         "ext-dom": "*",
-        "sebastian/finder-facade": "^2.0",
-        "sebastian/version": "^3.0",
-        "symfony/console": "^4.0|^5.0",
-        "phpunit/php-timer": "^3.0",
+        "sebastian/finder-facade": "^1.1",
+        "sebastian/version": "^1.0|^2.0",
+        "symfony/console": "^2.7|^3.0|^4.0",
+        "phpunit/php-timer": "^2.0",
         "friendsoftwig/twigcs": "^3.2",
         "shopsys/jparser": "^0.1",
         "yannickl88/css-tokenizer" : "^1.2"
@@ -45,10 +44,5 @@
     },
     "bin": [
         "phpweb-cpd"
-    ],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "5.0-dev"
-        }
-    }
+    ]
 }
