--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "sebastian/finder-facade": "^1.1",
         "sebastian/version": "^1.0|^2.0",
         "symfony/console": "^2.7|^3.0|^4.0",
-        "phpunit/php-timer": "^2.0",
+        "phpunit/php-timer": "^2.0|^3.0|^4.0|^5.0",
         "friendsoftwig/twigcs": "^3.2",
         "shopsys/jparser": "^0.1",
         "yannickl88/css-tokenizer" : "^1.2"
